<resources>
    <string name="app_name">Cook together!</string>
    <string name="open_nav">Open Navigation</string>
    <string name="close_nav">Close Navigation</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="name">Name</string>
    <string name="recipe_name">Recipe name</string>
    <string name="steps">Steps</string>
    <string name="ingredients">Ingredients</string>
    <string name="storage">Storages</string>
    <string name="recipes">Recipes</string>
    <string name="add_recipe">Add recipe</string>
    <string name="product_name">Product</string>
    <string name="product_amount">Amount</string>
    <string name="storage_name">Storage name</string>
    <string name="add_storage">Add storage</string>
    <string name="search_recipes">Search</string>
    <string name="search_recipe_products">Search</string>
    <string name="own_recipes">Own recipes</string>
    <string name="available_recipes">Available recipes</string>
    <string name="filter">Filter</string>
    <string name="remove_filter">Remove filter</string>
    <string name="delete_product">Delete product</string>
    <string name="add_amount">Add amount</string>
    <string name="modify_product">Modify product</string>
    <string name="subtract_amount">Subtract amount</string>
    <string name="add_product">Add product</string>
    <string name="add_step">Add step</string>
    <string name="save_recipe">Save recipe</string>
    <string name="step">Step</string>
    <string name="delete_step">Delete step</string>
    <string name="modify_step">Modify step</string>
    <string name="choose_file">Choose file</string>
    <string name="introduce_link">Introduce link</string>
    <string name="take_photo">Take photo</string>
    <string name="storages">Storages</string>
    <string name="cook_together_everywhere">Cook together everywhere!</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="google">Google</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings">Settings</string>
    <string name="close_session">Close session</string>
    <string name="sign_out">Sign out</string>
    <string name="storageProduct">Ingredient</string>
    <string name="modify_amount">Modify amount</string>
    <string name="modify_name">Modify name</string>
    <string name="modify_recipe">Modify recipe</string>
    <string name="shopping_lists">Shopping lists</string>
    <string name="delete_recipe">Delete recipe</string>
    <string name="create_new_storage">Create new storage</string>
    <string name="get_invite_code">Get invite code</string>
    <string name="join_existing_storage">Join existing storage</string>
    <string name="share_storage_code">Share storage code</string>
    <string name="leave_storage">Leave storage</string>
    <string name="the_storage_is_empty_add_a_product">The storage is empty. Add a product!</string>
    <string name="edited">Last edited:</string>
    <string name="shopping_list_name">Last edited</string>
    <string name="add_shopping_list">Add shopping list</string>
    <string name="x">X</string>
    <string name="add_bought_products_to_storage">Add bought products to storage</string>
    <string name="recipe_image">Recipe image</string>
    <string name="you_are_not_part_of_any_storage_create_or_join_one">You are not part of any storage. Create or join one!</string>
    <string name="create_shopping_list">Create shopping list</string>
    <string name="selected_storage">Selected storage</string>
    <string name="shoppingListStorage">Storage:</string>
    <string name="you_have_no_shopping_list_create_a_new_one">You have no shopping list. Create a new one!</string>
    <string name="get_available_recipes">Get available recipes</string>
    <string name="delete_shopping_list">Delete shopping list</string>
    <string name="rename_storage">Rename storage</string>
    <string name="storage_with_available_products">Storages with available ingredients</string>
    <string name="products">Nº of products</string>
    <string name="users">Nº of users</string>
    <string name="remove_products_from_storage">Remove products from storage</string>
    <string name="add_ingredients_to_shopping_list">Add ingredients to shopping list</string>
    <string name="create_new_shopping_list_with_ingredients">Create new shopping list</string>
    <string name="recipe">Recipe</string>
    <string name="n_of_shopping_lists">Nº of shopping lists</string>
    <string name="calendar">Calendar</string>
    <string name="save_recipes">Save recipes</string>
    <string name="add_ingredient">Add ingredient</string>
    <string name="no_recipes_found">No recipes with the introduced criteria were found.</string>
    <string name="calculate_portions">Calculate portions</string>
    <string name="add_to_shopping_list">Add to shopping list</string>
    <string name="add_to_an_existing_shopping_list">Add to an existing shopping list?</string>
    <string name="sign_in_with_google_custom">Sign in with Google</string>
</resources>