<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/calender_icon"
            android:title="@string/calendar" />
        <item
            android:id="@+id/nav_recipe_list"
            android:icon="@drawable/navigation_book"
            android:title="@string/recipes" />

        <item
            android:id="@+id/nav_storage_list"
            android:icon="@drawable/navigation_store"
            android:title="@string/storages" />

        <item
            android:id="@+id/nav_shopping_lists_list"
            android:icon="@drawable/navigation_shopping_cart"
            android:title="@string/shopping_lists" />

    </group>

    <item
        android:title="">
        <menu>
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@drawable/navigation_sign_out"
                android:title="@string/sign_out" />
        </menu>
    </item>
</menu>