<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/search_bar_storages"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search_recipes"
        android:tooltipText="Search by name or storageProduct"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom|withText" />
    <item
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/add_storage"
        app:showAsAction="always">
        <menu>

            <item
                android:id="@+id/menu_item_create_new_storage"
                android:title="@string/create_new_storage" />
            <item
                android:id="@+id/menu_item_join_storage"
                android:title="@string/join_existing_storage" />
        </menu>
    </item>
</menu>