<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/filter">
        <menu>
            <item
                android:id="@+id/menu_item_filter_by_owner"
                android:checkable="true"
                android:checked="false"
                android:title="@string/own_recipes" />
            <item
                android:id="@+id/menu_item_filter_by_storage"
                android:checkable="true"
                android:title="@string/available_recipes" />
        </menu>
    </item>
    <item
        android:id="@+id/search_bar_recipes"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search_recipes"
        android:tooltipText="Search by name or ingredients"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
</menu>