<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout_add_modify_recipe"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.AddModifyRecipeActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:fillViewport="false">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_add_modify_recipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

            <EditText
                android:id="@+id/etRecipeDetailName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/recipe_name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textAlignment="center"
                android:textSize="34sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar_add_modify_recipe" />

            <ImageView
                android:id="@+id/imgRecipeDetailAddImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="false"
                android:background="@drawable/rounded_borders_white_background"
                android:contentDescription="@string/recipe_image"
                android:cropToPadding="false"
                android:onClick="openContextMenu"
                android:outlineProvider="background"
                android:scaleType="centerCrop"
                app:layout_constrainedHeight="true"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_min="300dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etRecipeDetailName"
                app:layout_constraintWidth_min="300dp"
                app:srcCompat="@drawable/icon_image_not_found" />

            <TextView
                android:id="@+id/txtRecipeDetailIngredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ingredients"
                android:textSize="34sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgRecipeDetailAddImage" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvRecipeDetailIngredients"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtRecipeDetailIngredients" />

            <TextView
                android:id="@+id/txtRecipeDetailSteps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/steps"
                android:textSize="34sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnRecipeDetailAddIngredient" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvRecipeDetailSteps"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtRecipeDetailSteps" />

            <Button
                android:id="@+id/btnRecipeDetailAddIngredient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_ingredient"
                android:textSize="20sp"
                app:drawableStartCompat="@android:drawable/ic_input_add"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rvRecipeDetailIngredients" />

            <Button
                android:id="@+id/btnRecipeDetailAddStep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_step"
                android:textSize="20sp"
                app:drawableStartCompat="@android:drawable/ic_input_add"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rvRecipeDetailSteps" />

            <ProgressBar
                android:id="@+id/progressBarRecipe"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/toolbar_add_modify_recipe"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.98"
                app:layout_constraintStart_toStartOf="@+id/toolbar_add_modify_recipe"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/navigation_header"
        app:menu="@menu/navigation_menu" />

</androidx.drawerlayout.widget.DrawerLayout>
